--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -1,10 +1,17 @@
 [unix_http_server]
 file=/run/supervisord.sock
+chmod = 0700
+username = dummy
+password = dummy
 
 [supervisord]
+user=root
 logfile=/dev/docker-stdout
 logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
+serverurl=unix:///run/supervisord.sock
+username=dummy
+password=dummy
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
@@ -16,7 +23,7 @@ serverurl=unix:///run/supervisord.sock
 directory=/usr/src/app
 command=bundle exec puma --preload --pidfile tmp/pids/puma.pid
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
@@ -26,7 +33,7 @@ stderr_logfile_maxbytes=0
 directory=/usr/src/app
 command=bundle exec sidekiq --pidfile tmp/pids/sidekiq.pid
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
@@ -36,7 +43,7 @@ stderr_logfile_maxbytes=0
 directory=/usr/src/app
 command=bin/model-sync
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
