correct csp configuration

--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -57,7 +57,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
 
     add_header X-Frame-Options SAMEORIGIN;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none'";
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; object-src 'none'";
 
     location / {
         try_files $uri /index.html;
