--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -14,6 +14,7 @@ server {
         rewrite /(.*) /api/public/$1 break;
 
         proxy_pass_request_headers on;
+        proxy_intercept_errors on;
 
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-By $server_addr:$server_port;
