update config for app and nginx

--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -23,6 +23,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header CLIENT_IP $remote_addr;
 
+        proxy_hide_header X-Content-Type-Options;
+        proxy_hide_header X-XSS-Protection;
+
         proxy_buffer_size 4k;
         proxy_buffers 4 32k;
         proxy_busy_buffers_size 64k;
@@ -58,7 +61,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
 
     add_header X-Frame-Options SAMEORIGIN;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; object-src 'none'";
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data:; object-src 'none'";
 
     location / {
         try_files $uri /index.html;
@@ -72,6 +75,12 @@ server {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header CLIENT_IP $remote_addr;
+
+            proxy_hide_header X-Content-Type-Options;
+            proxy_hide_header X-XSS-Protection;
+
+            proxy_hide_header X-Frame-Options;
+            proxy_hide_header Content-Security-Policy;
 
             proxy_buffer_size 4k;
             proxy_buffers 4 32k;
