correct base_url in config and supervisord invocations

--- a/app/config/pompa.yml
+++ b/app/config/pompa.yml
@@ -9,6 +9,8 @@ default: &default
     admin: true
     public: true
     sidekiq_console: true
+  template:
+    base_url: "http://localhost:8081"
   redis:
     <<: *redis_default
 
