--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -23,7 +23,7 @@ serverurl=unix:///run/supervisord.sock
 directory=/usr/src/app
 command=bundle exec puma --preload --pidfile tmp/pids/puma.pid
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
@@ -33,7 +33,7 @@ stderr_logfile_maxbytes=0
 directory=/usr/src/app
 command=bundle exec sidekiq --pidfile tmp/pids/sidekiq.pid
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
@@ -43,7 +43,7 @@ stderr_logfile_maxbytes=0
 directory=/usr/src/app
 command=bin/model-sync
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="--jit"
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
