update dockerfile for pompa-app

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,6 +13,8 @@ COPY pompa-api/Gemfile.lock ./
 ENV RAILS_ENV production
 ENV RAILS_LOG_TO_STDOUT true
 
+RUN echo "gem: --no-document" >> ~/.gemrc
+RUN gem update --system
 RUN gem install bundler
 RUN bundle config --global frozen 1
 RUN bundle install --without development test
