--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -67,6 +67,8 @@ server {
         try_files $uri /index.html;
 
         location /api {
+            client_max_body_size 16M;
+
             proxy_pass_request_headers on;
 
             proxy_set_header Host $http_host;
