disable pid files

--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -21,7 +21,7 @@ serverurl=unix:///run/supervisord.sock
 
 [program:puma]
 directory=/usr/src/app
-command=bundle exec puma --preload --pidfile tmp/pids/puma.pid
+command=bundle exec puma --preload
 user=pompa
 environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile=/dev/docker-stdout
@@ -31,7 +31,7 @@ stderr_logfile_maxbytes=0
 
 [program:sidekiq]
 directory=/usr/src/app
-command=bundle exec sidekiq --pidfile tmp/pids/sidekiq.pid
+command=bundle exec sidekiq
 user=pompa
 environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile=/dev/docker-stdout
