update drone.yml #2

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,9 +13,8 @@ steps:
   - git config user.email "drone@nalewajski.pl"
   - git config user.name "Drone CI"
   - git config merge.ours.driver true
-  - git config merge.theirs.driver true
   - git remote add upstream https://github.com/m1nl/pompa-docker.git
   - git fetch upstream
-  - git merge --squash --allow-unrelated-histories upstream/master
+  - git merge --squash --allow-unrelated-histories --strategy=recursive --strategy-option=theirs upstream/master
   - git commit --allow-empty -m "merge with $DRONE_COMMIT ($DRONE_COMMIT_MESSAGE) by $DRONE_COMMIT_AUTHOR"
   - git push origin master
