--- a/.drone.yml
+++ b/.drone.yml
@@ -8,12 +8,12 @@ steps:
 - name: update_ci
   image: docker:git
   environment:
-    POMPA_CI_DEPLOY_KEY:
-      from_secret: pompa_ci_deploy_key
+    POMPA_CD_DEPLOY_KEY:
+      from_secret: pompa_cd_deploy_key
   commands:
   - export SHORT_COMMIT="$(echo $DRONE_COMMIT | cut -c1-7)"
   - mkdir -p ~/.ssh
-  - echo -ne "$POMPA_CI_DEPLOY_KEY" > ~/.ssh/id_rsa
+  - echo -ne "$POMPA_CD_DEPLOY_KEY" > ~/.ssh/id_rsa
   - ssh-keyscan -H github.com > ~/.ssh/known_hosts
   - chmod 600 ~/.ssh/id_rsa ~/.ssh/known_hosts
   - git clone git@github.com:m1nl/pompa-ci.git
