--- a/.drone.yml
+++ b/.drone.yml
@@ -25,7 +25,7 @@ steps:
   - git fetch upstream
   - git checkout --theirs upstream/master -- web/pompa
   - git checkout --theirs upstream/master -- app/pompa-api
-  - git commit --allow-empty -m "merge with $SHORT_COMMIT ($DRONE_COMMIT_MESSAGE) by $DRONE_COMMIT_AUTHOR"
+  - git commit --allow-empty -m "$DRONE_COMMIT_MESSAGE"
   - git merge --squash --allow-unrelated-histories --strategy=recursive --strategy-option=theirs upstream/master
   - git commit --allow-empty --amend --no-edit
   - git push origin master
