--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -23,6 +23,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header CLIENT_IP $remote_addr;
 
+        proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+        proxy_set_header X-Accel-Mapping /tmp=/tmp;
+
         proxy_hide_header X-Content-Type-Options;
         proxy_hide_header X-XSS-Protection;
 
