--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -10,6 +10,11 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
+    location /__send_file_accel {
+        internal;
+        alias /tmp;
+    }
+
     location / {
         rewrite /(.*) /api/public/$1 break;
 
@@ -24,7 +29,7 @@ server {
         proxy_set_header CLIENT_IP $remote_addr;
 
         proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping /tmp=/tmp;
+        proxy_set_header X-Accel-Mapping "/=/__send_file_accel";
 
         proxy_hide_header X-Content-Type-Options;
         proxy_hide_header X-XSS-Protection;
@@ -80,6 +85,9 @@ server {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header CLIENT_IP $remote_addr;
+
+            proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+            proxy_set_header X-Accel-Mapping "/=/__send_file_accel";
 
             proxy_hide_header X-Content-Type-Options;
             proxy_hide_header X-XSS-Protection;
