--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -29,7 +29,7 @@ server {
         proxy_set_header CLIENT_IP $remote_addr;
 
         proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping "/=/__send_file_accel";
+        proxy_set_header X-Accel-Mapping "/tmp=/__send_file_accel";
 
         proxy_hide_header X-Content-Type-Options;
         proxy_hide_header X-XSS-Protection;
@@ -87,7 +87,7 @@ server {
             proxy_set_header CLIENT_IP $remote_addr;
 
             proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-            proxy_set_header X-Accel-Mapping "/=/__send_file_accel";
+            proxy_set_header X-Accel-Mapping "/tmp=/__send_file_accel";
 
             proxy_hide_header X-Content-Type-Options;
             proxy_hide_header X-XSS-Protection;
