--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -71,6 +71,11 @@ server {
     add_header X-Frame-Options SAMEORIGIN;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data:; object-src 'none'";
 
+    location /__send_file_accel {
+        internal;
+        alias /tmp;
+    }
+
     location / {
         try_files $uri /index.html;
 
