remove sendfile directives from public api and limit scope in admin api

--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -10,11 +10,6 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
 
-    location /__send_file_accel {
-        internal;
-        alias /tmp;
-    }
-
     location / {
         rewrite /(.*) /api/public/$1 break;
 
@@ -27,9 +22,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header CLIENT_IP $remote_addr;
-
-        proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-        proxy_set_header X-Accel-Mapping "/tmp=/__send_file_accel";
 
         proxy_hide_header X-Content-Type-Options;
         proxy_hide_header X-XSS-Protection;
@@ -91,9 +83,6 @@ server {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header CLIENT_IP $remote_addr;
 
-            proxy_set_header X-Sendfile-Type X-Accel-Redirect;
-            proxy_set_header X-Accel-Mapping "/tmp=/__send_file_accel";
-
             proxy_hide_header X-Content-Type-Options;
             proxy_hide_header X-XSS-Protection;
 
@@ -105,6 +94,13 @@ server {
             proxy_busy_buffers_size 64k;
 
             proxy_pass http://pompa;
+
+            location /api/workers/files {
+                proxy_set_header X-Sendfile-Type X-Accel-Redirect;
+                proxy_set_header X-Accel-Mapping "/tmp=/__send_file_accel";
+
+                proxy_pass http://pompa;
+            }
         }
     }
 }
