--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -1,11 +1,12 @@
 user nginx;
 worker_processes auto;
 
-error_log /var/log/nginx/error.log warn;
+error_log stderr warn;
 pid /var/run/nginx.pid;
 
 events {
     worker_connections 1024;
+    use epoll;
 }
 
 http {
@@ -26,8 +27,14 @@ http {
     server_tokens off;
 
     gzip on;
-    gzip_types application/x-javascript text/css application/javascript text/javascript text/plain text/xml application/json application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype application/x-font-ttf application/xml font/eot font/opentype font/otf image/svg+xml image/vnd.microsoft.icon;
+    gzip_min_length 10240;
+    tzip_comp_level 1;
+    gzip_vary on;
     gzip_disable "msie6";
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types application/x-javascript text/css application/javascript text/javascript text/plain text/xml application/json application/vnd.ms-fontobject application/x-font-opentype application/x-font-truetype application/x-font-ttf application/xml font/eot font/opentype font/otf image/svg+xml image/vnd.microsoft.icon;
+
+    reset_timedout_connection on;
 
     include /etc/nginx/conf.d/*.conf;
 }
