--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -28,7 +28,7 @@ http {
 
     gzip on;
     gzip_min_length 10240;
-    tzip_comp_level 1;
+    gzip_comp_level 1;
     gzip_vary on;
     gzip_disable "msie6";
     gzip_proxied expired no-cache no-store private auth;
