--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -36,5 +36,10 @@ http {
 
     reset_timedout_connection on;
 
+    real_ip_header X-Real-IP;
+    set_real_ip_from 192.168.0.0/24;
+    set_real_ip_from 172.16.0.0/12;
+    set_real_ip_from 10.0.0.0/8;
+
     include /etc/nginx/conf.d/*.conf;
 }
