--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -18,7 +18,7 @@ server {
 
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-By $server_addr:$server_port;
-        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header CLIENT_IP $remote_addr;
@@ -78,7 +78,7 @@ server {
 
             proxy_set_header Host $http_host;
             proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header CLIENT_IP $remote_addr;
