--- a/web/nginx/conf.d/default.conf
+++ b/web/nginx/conf.d/default.conf
@@ -2,6 +2,11 @@ upstream pompa {
     server app:3000;
 }
 
+map $http_x_forwarded_proto $proxied_scheme {
+    default $scheme;
+    https https;
+}
+
 server {
     listen 8081 default_server;
     server_name _;
@@ -17,11 +22,17 @@ server {
         proxy_intercept_errors on;
 
         proxy_set_header Host $http_host;
+
+        proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-By $server_addr:$server_port;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto $proxied_scheme;
+        proxy_set_header X-Forwarded-Port $server_port;
+
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header CLIENT_IP $remote_addr;
+
+        proxy_set_header Accept-Encoding "";
 
         proxy_hide_header X-Content-Type-Options;
         proxy_hide_header X-XSS-Protection;
@@ -77,11 +88,17 @@ server {
             proxy_pass_request_headers on;
 
             proxy_set_header Host $http_host;
+
+            proxy_set_header X-Forwarded-Server $host;
             proxy_set_header X-Forwarded-By $server_addr:$server_port;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Proto $proxied_scheme;
+            proxy_set_header X-Forwarded-Port $server_port;
+
+            proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header CLIENT_IP $remote_addr;
+
+            proxy_set_header Accept-Encoding "";
 
             proxy_hide_header X-Content-Type-Options;
             proxy_hide_header X-XSS-Protection;
