--- a/web/nginx/nginx.conf
+++ b/web/nginx/nginx.conf
@@ -37,6 +37,7 @@ http {
     reset_timedout_connection on;
 
     real_ip_header X-Real-IP;
+    real_ip_recursive on;
     set_real_ip_from 192.168.0.0/16;
     set_real_ip_from 172.16.0.0/12;
     set_real_ip_from 10.0.0.0/8;
