--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -23,7 +23,7 @@ serverurl=unix:///run/supervisord.sock
 directory=/usr/src/app
 command=bundle exec puma --preload
 user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
+environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
 stdout_logfile=/dev/docker-stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/docker-stderr
