--- a/contrib/docker-swarm/pompa-stack.yml.sample
+++ b/contrib/docker-swarm/pompa-stack.yml.sample
@@ -15,7 +15,7 @@ services:
       - POMPA_DB=pompa
       - POMPA_DB_USERNAME=pompa
       - POMPA_DB_HOST=db
-      - POMPA_BASE_URL=https://<change me> # instance-default base URL
+      - POMPA_BASE_URL=https://<change me>/ # instance-default base URL
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgres_db_password
     networks:
       - internal
