correct dockerfile to follow bundler depreciation warnings

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,10 +13,11 @@ COPY pompa-api/Gemfile.lock ./
 ENV RAILS_ENV production
 ENV RAILS_LOG_TO_STDOUT true
 
-RUN echo "gem: --no-document" >> ~/.gemrc
 RUN gem update --system
 RUN gem install bundler
+
 RUN bundle config --global frozen 1
+RUN bundle config --global set without 'development test'
 RUN bundle install --without development test
 
 COPY pompa-api/ ./
