--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -1,50 +1,59 @@
 [unix_http_server]
-file=/run/supervisord.sock
+file = /run/supervisord.sock
 chmod = 0700
 username = dummy
 password = dummy
 
 [supervisord]
-user=root
-logfile=/dev/docker-stdout
-logfile_maxbytes=0
-pidfile=/var/run/supervisord.pid
-serverurl=unix:///run/supervisord.sock
-username=dummy
-password=dummy
+user = root
+logfile = /dev/docker-stdout
+logfile_maxbytes = 0
+pidfile = /var/run/supervisord.pid
+serverurl = unix:///run/supervisord.sock
+username = dummy
+password = dummy
 
 [rpcinterface:supervisor]
-supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-serverurl=unix:///run/supervisord.sock
+serverurl = unix:///run/supervisord.sock
 
 [program:puma]
-directory=/usr/src/app
-command=bundle exec puma --preload
-user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
-stdout_logfile=/dev/docker-stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/docker-stderr
-stderr_logfile_maxbytes=0
+directory = /usr/src/app
+command = bundle exec puma --preload
+user = pompa
+environment = HOME="/usr/src/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
+stdout_logfile = /dev/docker-stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/docker-stderr
+stderr_logfile_maxbytes = 0
+autostart = false
+autorestart = true
+startsecs = 10
 
 [program:sidekiq]
-directory=/usr/src/app
-command=bundle exec sidekiq
-user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
-stdout_logfile=/dev/docker-stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/docker-stderr
-stderr_logfile_maxbytes=0
+directory = /usr/src/app
+command = bundle exec sidekiq
+user = pompa
+environment = HOME="/usr/src/app",USER="pompa",RUBYOPT=""
+stdout_logfile = /dev/docker-stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/docker-stderr
+stderr_logfile_maxbytes = 0
+autostart = false
+autorestart = true
+startsecs = 10
 
 [program:model-sync]
-directory=/usr/src/app
-command=bin/model-sync
-user=pompa
-environment=HOME="/usr/src/app",USER="pompa",RUBYOPT=""
-stdout_logfile=/dev/docker-stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/docker-stderr
-stderr_logfile_maxbytes=0
+directory = /usr/src/app
+command = bin/model-sync
+user = pompa
+environment = HOME="/usr/src/app",USER="pompa",RUBYOPT=""
+stdout_logfile = /dev/docker-stdout
+stdout_logfile_maxbytes = 0
+stderr_logfile = /dev/docker-stderr
+stderr_logfile_maxbytes = 0
+autostart = false
+autorestart = true
+startsecs = 10
