--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -21,7 +21,7 @@ serverurl = unix:///run/supervisord.sock
 
 [program:puma]
 directory = /usr/src/app
-command = bundle exec puma --preload
+command = /usr/local/bundle/bin/bundle exec puma --preload
 user = pompa
 environment = HOME="/usr/src/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
 stdout_logfile = /dev/docker-stdout
@@ -34,7 +34,7 @@ startsecs = 10
 
 [program:sidekiq]
 directory = /usr/src/app
-command = bundle exec sidekiq
+command = /usr/local/bundle/bin/bundle exec sidekiq
 user = pompa
 environment = HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile = /dev/docker-stdout
@@ -47,7 +47,7 @@ startsecs = 10
 
 [program:model-sync]
 directory = /usr/src/app
-command = bin/model-sync
+command = /usr/src/app/bin/model-sync
 user = pompa
 environment = HOME="/usr/src/app",USER="pompa",RUBYOPT=""
 stdout_logfile = /dev/docker-stdout
