change web container to facade

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = app/pompa-api
 	url = https://github.com/m1nl/pompa-api.git
 	branch = master
+[submodule "facade/pompa"]
+	path = facade/pompa
+	url = https://github.com/m1nl/pompa.git
