make puma listen also on unix socket

--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -21,7 +21,7 @@ serverurl = unix:///run/supervisord.sock
 
 [program:puma]
 directory = /usr/src/app
-command = /usr/local/bundle/bin/bundle exec puma --preload
+command = /usr/local/bundle/bin/bundle exec puma --preload -b tcp://0.0.0.0:3000 -b unix://tmp/sockets/puma.sock
 user = pompa
 environment = HOME="/usr/src/app",USER="pompa",RUBYOPT="",RAILS_MAX_THREADS=5,WEB_CONCURRENCY=2
 stdout_logfile = /dev/docker-stdout
